fix sidebar bug not showing buttons on small screens sideber leftside is no longer full height

--- a/app/assets/stylesheets/sidenav.css
+++ b/app/assets/stylesheets/sidenav.css
@@ -7,7 +7,8 @@
     left: -23%;
     position: fixed;
     z-index: 1;
-    top: 49px;
+    bottom: 48px;
+    top: 48px;
     color: rgb(114, 114, 114);
     background-color: #333;
     transition: 0.5s;
@@ -16,7 +17,7 @@
   .sidenav .left{
     flex-direction: column;
     flex: 90%;
-    height: 100%;
+    height: 90%;
     padding-top: 10px;
     padding: 20px;
     overflow: auto;
